@@ -1,5 +1,11 @@
 2015-09-30  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/echo-area.c (ea_rubout),
+	* TODO: Abort echo area read if backspace at start of area and 
+	user input is empty.
+
+2015-09-30  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/echo-area.c (input_line_prompt): Remove unused variable.
 	(PUSHED_EA): Remove unused field 'prompt'.
 
